RESOLVED FIXED148750
Web Inspector: should crash on purpose if InjectedScriptSource.js is unparseable
https://bugs.webkit.org/show_bug.cgi?id=148750
Summary Web Inspector: should crash on purpose if InjectedScriptSource.js is unparseable
Blaze Burg
Reported 2015-09-03 14:19:13 PDT
If the injected script cannot be parsed as a ScriptObject, the current behavior is to crash some time later. This patch adds a release assertion after trying to inject the script, and dumps the injected script source text that was embedded into the binary.
Attachments
Proposed Fix (2.04 KB, patch)
2015-09-03 14:27 PDT, Blaze Burg
no flags
Blaze Burg
Comment 1 2015-09-03 14:27:54 PDT
Created attachment 260523 [details] Proposed Fix
WebKit Commit Bot
Comment 2 2015-09-03 15:29:01 PDT
Comment on attachment 260523 [details] Proposed Fix Clearing flags on attachment: 260523 Committed r189295: <http://trac.webkit.org/changeset/189295>
WebKit Commit Bot
Comment 3 2015-09-03 15:29:05 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2015-09-03 17:48:25 PDT
Note You need to log in before you can comment on or make changes to this bug.