Web Inspector: should crash on purpose if InjectedScriptSource.js is unparseable https://bugs.webkit.org/show_bug.cgi?id=148750

Reviewed by Timothy Hatcher.

If an injected script cannot be parsed or executed without exception, we should abort as
soon as possible. This patch adds a release assertion after creating the injected
script and dumps the bad injected script's source as it was embedded into the binary.

* inspector/InjectedScriptManager.cpp:
(Inspector::InjectedScriptManager::injectedScriptFor):


Canonical link: https://commits.webkit.org/166868@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189295 268f45cc-cd09-0410-ab3c-d52691b4dbfc